--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "phpmailer/phpmailer": "^6.10",
-        "twilio/sdk": "^8.8"
+        "twilio/sdk": "^8.8",
+        "guzzlehttp/guzzle": "^7.10"
     }
 }
